Move use of jetty-client from v12 to v10 Fix Java 21 vs 11 diffs Adapt to test-framework diffs